created controllers and rewrote OpenApi schemas
