# src/main/java/parser/app/webscraper/controllers/FoldersController.java
@@ -1,13 +1,10 @@
 package parser.app.webscraper.controllers;
 
 import io.micrometer.observation.annotation.Observed;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-import parser.app.webscraper.models.FolderItem;
+import org.springframework.web.bind.annotation.*;
 import parser.app.webscraper.services.interfaces.FolderService;
 import parser.userService.openapi.api.FolderApiDelegate;
 import parser.userService.openapi.model.FolderItemOpenApi;
@@ -21,17 +18,52 @@ import java.util.List;
 public class FoldersController implements FolderApiDelegate {
     private final FolderService folderService;
 
-//    @Observed
-//    @GetMapping
-//    public ResponseEntity<FolderOpenApiFolderItemsInner> getAllFolderItemsByUserId(@RequestParam(name = "userId") Long userId) {
-//        return folderService.getAllFolderItemsByUserId(userId);
-//    }
-
-
+    @Observed
+    @GetMapping
     @Override
-    public ResponseEntity<List<FolderItemOpenApi>> getAllFolderItemsByUserId(Long userId) {
+    public ResponseEntity<List<FolderItemOpenApi>> getAllFolderItemsByUserId(
+            @RequestParam(name = "userId") Long userId
+    ) {
         return ResponseEntity.ok(folderService.getAllFolderItemsByUserId(userId));
     }
 
+    @Observed
+    @PostMapping
+    @Override
+    public ResponseEntity<Void> createFolder(
+            @RequestParam(name = "userId") @Valid Long userId,
+            @RequestBody FolderOpenApi folderOpenApi
+    ) {
+        return folderService.createNewFolder(userId, folderOpenApi);
+    }
+
+
+    @Observed
+    @GetMapping("/{folderId}")
+    @Override
+    public ResponseEntity<List<FolderItemOpenApi>> getAllFolderItemsByFolderId(
+            @PathVariable(name = "folderId") @Valid Long folderId
+    ) {
+        return ResponseEntity.ok(folderService.getAllFolderItemsByFolderId(folderId));
+    }
+
+    @Observed
+    @PutMapping("/{folderId}")
+    @Override
+    public ResponseEntity<Void> updateFolderById(
+            @PathVariable(name = "folderId") @Valid Long folderId,
+            @RequestBody FolderOpenApi folderOpenApi
+    ) {
+        return folderService.updateFolderById(folderId, folderOpenApi);
+    }
+
+    @Observed
+    @DeleteMapping("/{folderId}")
+    @Override
+    public ResponseEntity<Void> deleteFolderById(
+            @PathVariable(name = "folderId") @Valid Long folderId
+    ) {
+        return folderService.deleteFolderById(folderId);
+    }
 
 }
